...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:layout_centerHorizontal="true"
                android:inputType="textCapWords"
...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"
                android:hint=""
                android:layout_centerHorizontal="true"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="textEmailAddress"
                android:textColorHighlight="#fb00ff"
...
                android:textSize="20dp"
                android:textColor="#009688" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/phoneEditText"
                android:hint=""
                android:textSize="20dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:inputType="phone"
                android:textColorHighlight="#fb00ff"
...
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                android:progressTint="#FFCC00"
...
                android:id="@+id/viewHostHistoryButton"
                 />

        </LinearLayout>

        <ToggleButton
            android:id="@+id/editUserDetailsToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textOn="Done"
            android:textOff="Update information"
            android:layout_gravity="center_horizontal" />
...
